# lvzhi_assistant

./: .gitignore  .gitmodules  README.md  luzhi_db.sql  start-legal-api.sh
Frontend/: README.md  config.js  index.html  index.html.bak  login.html  server.js
Frontend/css/: style.css
Frontend/js/: chat.js  chat.js.bak2  chat.js.bak3  main.js  tools.js  utils.js
Legal_Assistant/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ecosystem.config.js  pyproject.toml
Legal_Assistant/alembic/: env.py
Legal_Assistant/alembic/versions/: 001_baseline_external_schema.py
Legal_Assistant/app/: __init__.py  main.py
Legal_Assistant/app/api/: deps.py
Legal_Assistant/app/api/v1/: agent.py  auth.py  chat.py  chat_sessions.py  contract.py  contract_download.py  health.py  legal_search.py  router.py
Legal_Assistant/app/core/: config.py  exceptions.py  logging.py
Legal_Assistant/app/db/: session.py
Legal_Assistant/app/db/models/: __init__.py  chat_message.py  chat_session.py  contract.py  uploaded_file.py  user.py
Legal_Assistant/app/schemas/: common.py
Legal_Assistant/app/services/: chat_completion_handler.py  chat_history.py  conversation.py  session_utils.py  sms.py  sse_text_accumulator.py  user_ids.py  users.py  yuanqi_client.py
Legal_Assistant/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_sessions.py  test_health.py
court-rehearsal-ai/: index.html  package-lock.json  package.json
court-rehearsal-ai/server/: index.js
